# mcp-server-demo

./: .gitignore  .pre-commit-config.yaml  README.md
go/: go.mod  go.sum  main.go
go/handlers/: tools.go
python/: Makefile  README.md  pyproject.toml
python/mcp_server_demo/: server.py
rust/: Cargo.toml  Makefile
rust/src/: main.rs
